--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -327,3 +327,8 @@ div.contact-icons {
 div.contact-icons ul {
 	padding: 20px 0 0 0;
 }
+
+#arc-legend li span:hover {
+	text-decoration:underline;
+	cursor: pointer;
+}
