--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -65,6 +65,9 @@ header {margin:0; position:fixed; top:0px; left:0; z-index:1000; width:100%; hei
 .shadow { background:url(../images/shadow-top.png) repeat-x ; width:100%; height:5px; position:fixed; top:100px; left:0; z-index:999;}
 .logo{ width:160px; height:140px; background:url(../images/logo.png) 0 0 no-repeat; position:absolute; top:0; left:0; z-index:1000; margin:-5px 0 0 0;}
 
+.logo div { float:left; color:#F9F9F9;text-shadow:none;font-family: 'Oswald', sans-serif; font-size:17px; line-height:22px; font-weight:400; padding:4px 0 0 5px; margin:0;}
+.logo .cursive {font-family: 'Lobster Two', cursive; font-weight:500; font-size:22px;  font-style:italic; color:#153134;text-shadow:none; padding: 5px 0 0px 23px; overflow:hidden; height:22px;}
+
 /***** Section *****/
 
 section{ width:100%; min-height:500px; margin:0 auto; padding:0; position:relative;}
