--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -63,10 +63,10 @@ border: 0;
 header {margin:0; position:fixed; top:0px; left:0; z-index:1000; width:100%; height:100px; padding:0;background:#153134 url(../images/bg-header.png) repeat-x;}
 .top-row {margin:0; position:fixed; top:0; left:0; z-index:999; width:100%; height:5px; padding:0;background:#153134 url(../images/bg-m.png) repeat-x;}
 .shadow { background:url(../images/shadow-top.png) repeat-x ; width:100%; height:5px; position:fixed; top:100px; left:0; z-index:999;}
-.logo{ width:160px; height:140px; background:url(../images/logo.png) 0 0 no-repeat; position:absolute; top:0; left:0; z-index:1000; margin:-5px 0 0 0;}
+.logo{ text-align:left; width:160px; height:140px; background:url(../images/logo_blank.png) 0 0 no-repeat; position:absolute; top:0; left:0; z-index:1000; margin:-5px 0 0 0;}
 
-.logo div { float:left; color:#F9F9F9;text-shadow:none;font-family: 'Oswald', sans-serif; font-size:17px; line-height:22px; font-weight:400; padding:4px 0 0 5px; margin:0;}
-.logo .cursive {font-family: 'Lobster Two', cursive; font-weight:500; font-size:22px;  font-style:italic; color:#153134;text-shadow:none; padding: 5px 0 0px 23px; overflow:hidden; height:22px;}
+.logo div { text-align:center; margin:0 auto; margin-left:0px; width:150px; color:#F0F0F0;text-shadow:none;font-family: 'Oswald', sans-serif; font-size:28px; line-height:22px; font-weight:310; padding:15px 0 0 0px;}
+.logo .cursive { margin:0 auto; margin-left:0px; width:150px; font-family: 'Lobster Two', cursive; font-weight:590; font-size:42px;  font-style:italic; color:#15313F;text-shadow:9.px .9px 0 #F0F0F0, 1px 1px 0 #b73b04; padding: 25px 0 0px 0px;}
 
 /***** Section *****/
 
