--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -67,6 +67,7 @@ header {margin:0; position:fixed; top:0px; left:0; z-index:1000; width:100%; hei
 
 .logo div { text-align:center; margin:0 auto; margin-left:0px; width:150px; color:#F0F0F0;text-shadow:.9px .9px 0 #000, 1px 1px 0 #153134;font-family: 'Oswald', sans-serif; font-size:28px; line-height:22px; font-weight:310; padding:15px 0 0 0px;}
 .logo .cursive { margin:0 auto; margin-left:0px; width:150px; font-family: 'Lobster Two', cursive; font-weight:590; font-size:42px;  font-style:italic; color:#15313F;text-shadow:1px 1px 0 #F0F0F0, 1px 1px 0 #b73b04; padding: 25px 0 0px 0px;}
+.logo .cursive .fix-me { margin-left:-7px; }
 
 /***** Section *****/
 
@@ -92,6 +93,7 @@ section{ width:100%; min-height:500px; margin:0 auto; padding:0; position:relati
 .top-title h1{ color:#ffffff;text-shadow:2px 2px 0 #b9b9ba, 4px 4px 0 #153134;font-family: 'Oswald', sans-serif; font-size:105px; line-height:120px; font-weight:400; padding:10px 0 0 0; margin:0;}
 .top-title span.plain, .top-title div.plain{ color:#ffffff;text-shadow:2px 2px 0 #b9b9ba, 4px 4px 0 #153134;font-family: 'Oswald', sans-serif; font-style:normal; font-size:115px; line-height:120px; font-weight:400; padding:20px 0 0 19px; margin:0;}
 .top-title h1 span.cursive, .top-title h1 div.cursive{font-family: 'Lobster Two', cursive; font-weight:400; font-size:160px; vertical-align:-15px; font-style:italic; color:#153134;text-shadow:1px 1px 0 #ffffff, 3px 3px 0 #a9a9a8; padding: 0px 0 0px 0;}
+.top-title h1 span.cursive, .top-title h1 div.cursive .fix-me { margin-left:-34px; }
 .top-title h2{ color:#153134;text-shadow:1px 1px 0 #ffffff, 3px 3px 0 #a9a9a8;font-family: 'Six Caps', sans-serif; font-size:90px;line-height:130px;padding:0; margin:0; letter-spacing:10px;}
 .top-title-slider{ text-align:center; padding:150px 0 60px 0;}
 .top-title-slider h2{ color:#153134;text-shadow:1px 1px 0 #ffffff, 3px 3px 0 #a9a9a8;font-family: 'Six Caps', sans-serif; font-size:100px;line-height:100px;padding:0; margin:0; letter-spacing:10px;}
