--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -304,10 +304,6 @@ ul.arrow li{padding: 0 0 1px 14px;background: url(../images/arrow.png) no-repeat
 #intro-zombie {
 	text-align:left;
 }
-#intro-zombie img {
-	width:90%;
-	margin: 155px 0 0 0;
-}
 
 .tagline {
 	padding: 20px 0 0 0;
@@ -343,3 +339,163 @@ div.contact-icons ul {
 #contact h1 {
 	padding:1px 0 0 0;
 }
+
+#intro-zombie-img {
+	background: url('../images/intro-zombie.png');
+	width: 314px;
+	height: 512px;
+	margin: 155px 0 0 0;
+}
+
+
+
+
+
+/*  #Mobile (Portrait)
+================================================== */
+
+    /* Note: Design for a width of 320px */
+
+    @media only screen and (max-width: 767px) {
+        .logo { display:none; }
+        #main-navigation_container { 
+        	text-align:center; 
+        	width:90%;
+        }
+        .main-navigation { 
+        	margin: 0 auto;  
+        	padding: 10px 0 0 0;
+        	float:none;
+        }
+        .main-navigation li a { font-size:16px;  }
+
+        .container { margin:0; }
+        article .container { margin:0 0 0 10px; width:90%; overflow:hidden; }
+
+        header {
+        	height:50px;
+        }
+
+        .shadow {
+        	top: 50px;
+        }
+
+        .title-section {
+			margin-top: 60px;
+			padding-top: 20px;
+			background: none;
+		}
+
+        .title-section h1 {
+			letter-spacing: 4px;
+			font-size:80px;
+			text-shadow: 1px 1px 0 white, 2px 2px 0 #A9A9A8;
+		}
+
+		.divider {
+			height: 10px;
+		}
+
+        .top-title {
+			text-align: left;
+			padding: 80px 0 30px 0;
+		}
+
+        .top-title h2 {
+			text-shadow: 1px 1px 0 white, 2px 2px 0 #A9A9A8;
+			font-size: 40px;
+			line-height: 40px;
+			letter-spacing: 5px;
+			padding: 0px 0 0 0px;
+        	text-align:center;
+		}
+
+        .top-title h2 span {
+			margin: 0px 0 0 -58%;
+		}
+
+        .top-title h1 span.cursive, .top-title h1 div.cursive {
+			font-weight: 400;
+			font-size: 100px;
+			line-height: 90px;
+			vertical-align: -15px;
+			text-shadow: 1px 1px 0 white, 3px 3px 0 #A9A9A8;
+			text-align:center;
+		}
+
+		.top-title span.plain, .top-title div.plain {
+			text-shadow: 2px 2px 0 #B9B9BA, 4px 4px 0 #153134;
+			font-size: 75px;
+			line-height: 70px;
+			font-weight: 400;
+			padding: 10px 0 0 0px;
+		}
+
+		#intro-zombie-img {
+			background: url('../images/zombie-head.png');
+			width: 200px;
+			height: 201px;
+			margin: 0 auto;
+			text-align:center;
+		}
+
+		.tagline h2 {
+			text-align:center;
+		}
+
+		.block-info {
+			min-height: 230px;
+		}
+
+		article div.info h1, article div.skills h1 {
+			margin-top:30px;
+		}
+
+		div.skills div.bar {
+			width: 65%;
+			margin: 0 0 10px 0;
+		}
+
+		div.skills div.last {
+			width: 35%;
+			margin: 0 0 10px 0;
+		}
+
+		.tweets {
+			display:none;
+		}
+
+		#google_map_container {
+			display:none;
+		}
+		
+		ul.socicon-big {
+			text-align: left;
+			margin-left: 0px;
+		}
+
+		ul.socicon-big li {
+			margin: 0 auto;
+			width: 100%;
+			text-align: center;
+		}
+		
+		ul.socicon-big li span.link {
+			float:none;
+			margin:0;
+			width:100%;
+		}
+
+		ul.socicon-big li span.phone, ul.socicon-big li a.email, ul.socicon-big li a.twitter {
+			padding: 14px 20px 0 0;
+			font-size: 28px;
+			margin: 0 auto;
+			float: none;
+			padding: 5px 0 5px 0;
+		}
+
+		#toTop {
+			visibility:hidden;
+		}
+
+    }
