--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -69,6 +69,7 @@ header {margin:0; position:fixed; top:0px; left:0; z-index:1000; width:100%; hei
 .logo .cursive { margin:0 auto; margin-left:0px; width:150px; font-family: 'Lobster Two', cursive; font-weight:590; font-size:42px;  font-style:italic; color:#15313F;text-shadow:1px 1px 0 #F0F0F0, 1px 1px 0 #b73b04; padding: 25px 0 0px 0px;}
 .logo .cursive .fix-me { margin-left:-7px; }
 
+
 /***** Section *****/
 
 section{ width:100%; min-height:500px; margin:0 auto; padding:0; position:relative;}
@@ -94,6 +95,10 @@ section{ width:100%; min-height:500px; margin:0 auto; padding:0; position:relati
 .top-title span.plain, .top-title div.plain{ color:#ffffff;text-shadow:2px 2px 0 #b9b9ba, 4px 4px 0 #153134;font-family: 'Oswald', sans-serif; font-style:normal; font-size:115px; line-height:120px; font-weight:400; padding:20px 0 0 19px; margin:0;}
 .top-title h1 span.cursive, .top-title h1 div.cursive{font-family: 'Lobster Two', cursive; font-weight:400; font-size:160px; vertical-align:-15px; font-style:italic; color:#153134;text-shadow:1px 1px 0 #ffffff, 3px 3px 0 #a9a9a8; padding: 0px 0 0px 0;}
 .top-title h1 span.cursive, .top-title h1 div.cursive .fix-me { margin-left:-34px; }
+@-moz-document url-prefix() {
+    .top-title h1 span.cursive, .top-title h1 div.cursive .fix-me { margin-left:-8px; }
+}
+
 .top-title h2{ color:#153134;text-shadow:1px 1px 0 #ffffff, 3px 3px 0 #a9a9a8;font-family: 'Six Caps', sans-serif; font-size:90px;line-height:130px;padding:0; margin:0; letter-spacing:10px;}
 .top-title-slider{ text-align:center; padding:150px 0 60px 0;}
 .top-title-slider h2{ color:#153134;text-shadow:1px 1px 0 #ffffff, 3px 3px 0 #a9a9a8;font-family: 'Six Caps', sans-serif; font-size:100px;line-height:100px;padding:0; margin:0; letter-spacing:10px;}
