--- a/stylesheets/skeleton.css
+++ b/stylesheets/skeleton.css
@@ -50,7 +50,9 @@
     .container .sixteen.columns                 { width: 940px; }
 
     .container .one-third.column                { width: 300px; }
-    .container .two-thirds.column               { width: 620px; }
+    .container .two-thirds.column               { 
+        width: 620px;
+    }
 
     /* Offsets */
     .container .offset-by-one                   { padding-left: 60px;  }
